# openfx-licenceplateblur

./: .gitmodules  CMakeLists.txt  README.md
LicenceplateBlur/: LicencePlateProcessor.h  LicencePlateProcessorBase.h  LicenceplateBlur.cpp  RGBAValues.h
